panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__call__test_varargs_no_varargs.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/call/test_varargs_no_varargs.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_varargs_no_varargs.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(argc: int, argv: ptr<ptr<char>>) -> int`
      (params
         argc~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1)))))))

----- stderr -----
